Significantly improved Search Speed.