@@ -1,7 +1,6 @@
 package com.jaceg18.Gameplay.Search.AI.Algorithm;
 
 import com.jaceg18.Gameplay.Search.AI.Evaluation.EvaluationStrategy;
-import com.jaceg18.Gameplay.Search.AI.RepetitionTracker;
 import com.jaceg18.Gameplay.Search.AI.SearchConstants;
 import com.jaceg18.Gameplay.Search.AI.SearchMetrics;
 import com.jaceg18.Gameplay.TB.FenUtil;
@@ -11,40 +10,63 @@ import com.jaceg18.Gameplay.Utility.Attacks;
 import com.jaceg18.Gameplay.Utility.GameState;
 import com.jaceg18.Gameplay.Utility.MoveGen;
 import com.jaceg18.Gameplay.Zobrist;
+import jdk.jfr.Experimental;
 
 import java.util.List;
 import java.util.function.IntConsumer;
 import java.util.function.IntSupplier;
-
+import java.util.function.LongToIntFunction;
 
 public final class NegamaxAB implements SearchAlgorithm {
 
     private final TranspositionTable tt;
     private final MoveOrderer orderer;
-    private final RepetitionTracker rep;
     private final EvaluationStrategy eval;
     private final SearchMetrics metrics;
-
     private final IntSupplier maxDepthSupplier;
 
-    private final GameState.Undo[] undo = new GameState.Undo[SearchConstants.MAX_PLY];
+    @Experimental private static final int TAKE_DRAW_IF_WORSE = 120;
+    @Experimental private static final int REP_TAKE_BONUS     = 40;
+    @Experimental private static final int REP_AVOID_PENALTY  = 200;
+    @Experimental private static final int TWOFOLD_PENALTY    = 120;
 
-    private final TranspositionTable.ProbeOut[] probeOutByPly =
-            new TranspositionTable.ProbeOut[SearchConstants.MAX_PLY];
+    @Experimental private static final int FUT_MARGIN       = 120;
+    @Experimental private static final int FUT_CHILD_MARGIN = 90;
+    @Experimental private static final int LMP_D1_LIMIT     = 8;
+    @Experimental private static final int LMP_D2_LIMIT     = 12;
+
+    private final GameState.Undo[] undo = new GameState.Undo[SearchConstants.MAX_PLY];
+    private final TranspositionTable.ProbeOut[] probeOutByPly = new TranspositionTable.ProbeOut[SearchConstants.MAX_PLY];
+
+    private final long[] pathKeys = new long[SearchConstants.MAX_PLY];
+    private int floorPly = 0;
+
+
+
+    private long moveDeadlineNanos = Long.MAX_VALUE;
+    private boolean timeLimited = false;
+
+
+    private static final class TimeUp extends RuntimeException {
+        private static final long serialVersionUID = 1L;
+    }
+    private static final TimeUp TIME_UP = new TimeUp();
+
+    private void checkTime() {
+        if (timeLimited && System.nanoTime() >= moveDeadlineNanos) throw TIME_UP;
+    }
 
     public NegamaxAB(
             SearchConstants ignored,
             TranspositionTable tt,
             MoveOrderer orderer,
-            RepetitionTracker rep,
             EvaluationStrategy eval,
             SearchMetrics metrics,
             IntSupplier maxDepthSupplier,
-            java.util.function.IntConsumer maxDepthSetter
+            IntConsumer maxDepthSetter
     ) {
         this.tt = tt;
         this.orderer = orderer;
-        this.rep = rep;
         this.eval = eval;
         this.metrics = metrics;
         this.maxDepthSupplier = maxDepthSupplier;
@@ -52,20 +74,42 @@ public final class NegamaxAB implements SearchAlgorithm {
         for (int i = 0; i < probeOutByPly.length; i++) probeOutByPly[i] = new TranspositionTable.ProbeOut();
     }
 
-
     @Override
     public int computeBestMove(GameState root, IntConsumer progress) {
-        return computeBestMove(root, null, progress);
+       timeLimited = false;
+       moveDeadlineNanos = Long.MAX_VALUE;
+       return computeBestMove(root, null, progress);
+
+    }
+
+    @Override
+    public int computeBestMove(GameState root, int timeMs, IntConsumer progress) {
+
+      timeLimited = timeMs > 0;
+      moveDeadlineNanos = System.nanoTime() + Math.max(1, timeMs) * 1_000_000L;
+      try {
+          return computeBestMove(root, null, progress);
+      } finally {
+          timeLimited = false;
+          moveDeadlineNanos = Long.MAX_VALUE;
+      }
+    }
+
+    private LongToIntFunction repBase = k -> 0;
+
+    @Override
+    public void setRepetitionCounter(LongToIntFunction f) {
+        this.repBase = (f != null) ? f : (k -> 0);
+    }
+
+    private int repetitionScoreForUs(int standForUs) {
+        return (standForUs <= -TAKE_DRAW_IF_WORSE) ? +REP_TAKE_BONUS : -REP_AVOID_PENALTY;
     }
 
     public int computeBestMove(GameState root, List<Integer> history, IntConsumer progress) {
         if (progress != null) progress.accept(0);
-
-        seedRepetition(root, history);
-
         metrics.reset();
         tt.bumpAge();
-
         try {
             int pieces = Long.bitCount(root.allPieces());
             if (pieces <= 7) {
@@ -92,66 +136,80 @@ public final class NegamaxAB implements SearchAlgorithm {
             ChessBoardPanel.console.logWarn("TB probe failed (searching): " + t.getMessage());
         }
 
-
         int bestMove = -1, bestScore = -SearchConstants.INF;
         long t0 = System.nanoTime();
-
         int maxDepth = maxDepthSupplier.getAsInt();
-
         int prevScore = 0;
 
-        for (int depth = 1; depth <= maxDepth; depth++) {
-            long ds = System.nanoTime();
-            long ns = metrics.nodes;
+        pathKeys[0] = Zobrist.compute(root);
+        floorPly = 0;
 
-            List<Integer> moves = MoveGen.generateAllLegal(root);
-            if (moves.isEmpty()) {
-                bestScore = Attacks.isInCheck(root, root.whiteToMove()) ? (-SearchConstants.MATE) : 0;
-                bestMove = -1;
-                logIter(depth, bestScore, metrics.nodes - ns, (System.nanoTime() - ds) / 1_000_000, -1);
-                break;
-            }
-
-            long rootKey = rep.get(currentRootPly());
-            var pout = new TranspositionTable.ProbeOut();
-            int hashMove = tt.probe(rootKey, depth, -SearchConstants.INF, +SearchConstants.INF, pout) ? pout.move : 0;
-
-            moves.sort((a, b) -> {
-                if (a == hashMove && b != hashMove) return -1;
-                if (b == hashMove && a != hashMove) return 1;
-                boolean ac = GameState.isCapture(a), bc = GameState.isCapture(b);
-                return ac == bc ? 0 : (ac ? -1 : 1);
-            });
-
-            final int WINDOW = 50;
-            int alpha0 = Math.max(-SearchConstants.INF, prevScore - WINDOW);
-            int beta0 = Math.min(+SearchConstants.INF, prevScore + WINDOW);
-
-            RootResult rr = searchRootOnce(root, moves, depth, alpha0, beta0, maxDepth, progress);
-
-            if (rr.failedLow || rr.failedHigh) {
-                rr = searchRootOnce(root, moves, depth, -SearchConstants.INF, +SearchConstants.INF, maxDepth, progress);
-            }
-
-            bestMove = rr.bestMove;
-            bestScore = rr.bestScore;
-            prevScore = bestScore;
-
-            tt.store(rootKey, depth, TranspositionTable.EXACT, Util.toTTScore(bestScore, 0), bestMove, tt.age());
-
-            if (progress != null) progress.accept((depth * 100) / maxDepth);
-
-            if (Util.isMateScore(bestScore) && bestScore > 0) {
-                int mi = mateMovesFromScore(bestScore);
-                String side = root.whiteToMove() ? "White" : "Black";
-                ChessBoardPanel.console.logInfo("Forced mate in " + mi + " (" + side + ")");
-                break;
-            }
-
-            logIter(depth, bestScore, metrics.nodes - ns, (System.nanoTime() - ds) / 1_000_000, bestMove);
+        int baseAtRoot = repBase.applyAsInt(pathKeys[0]);
+        if (baseAtRoot >= 3) {
+            ChessBoardPanel.console.logInfo("Draw by threefold (root).");
+            if (progress != null) progress.accept(100);
+            return -1;
         }
 
-        long totalMs = (System.nanoTime()-t0)/1_000_000;
+        try {
+            for (int depth = 1; depth <= maxDepth; depth++) {
+                checkTime();
+
+                long ds = System.nanoTime();
+                long ns = metrics.nodes;
+
+                List<Integer> moves = MoveGen.generateAllLegal(root);
+                if (moves.isEmpty()) {
+                    bestScore = Attacks.isInCheck(root, root.whiteToMove()) ? (-SearchConstants.MATE) : 0;
+                    bestMove = -1;
+                    logIter(depth, bestScore, metrics.nodes - ns, (System.nanoTime() - ds) / 1_000_000, -1);
+                    break;
+                }
+
+                long rootKey = pathKeys[0];
+                var pout = new TranspositionTable.ProbeOut();
+                int hashMove = tt.probe(rootKey, depth, -SearchConstants.INF, +SearchConstants.INF, pout) ? pout.move : 0;
+                boolean inCheckRoot = Attacks.isInCheck(root, root.whiteToMove());
+                orderer.order(root, 0, hashMove, inCheckRoot, moves, depth);
+                final int WINDOW = 50;
+                int alpha0 = Math.max(-SearchConstants.INF, prevScore - WINDOW);
+                int beta0  = Math.min(+SearchConstants.INF, prevScore + WINDOW);
+
+                checkTime();
+
+                RootResult rr = searchRootOnce(root, moves, depth, alpha0, beta0, maxDepth, progress);
+                if (rr.failedLow || rr.failedHigh) {
+                    checkTime();
+                    int W2 = 200;
+                    int a2 = Math.max(-SearchConstants.INF, prevScore - W2);
+                    int b2 = Math.min(+SearchConstants.INF, prevScore + W2);
+                    rr = searchRootOnce(root, moves, depth, a2, b2, maxDepth, progress);
+                    if (rr.failedLow || rr.failedHigh) {
+                        checkTime();
+                        rr = searchRootOnce(root, moves, depth, -SearchConstants.INF, +SearchConstants.INF, maxDepth, progress);
+                    }
+                }
+                bestMove = rr.bestMove;
+                bestScore = rr.bestScore;
+                prevScore = bestScore;
+
+                tt.store(rootKey, depth, TranspositionTable.EXACT, Util.toTTScore(bestScore, 0), bestMove, tt.age());
+
+                if (progress != null) progress.accept((depth * 100) / maxDepth);
+
+                if (Util.isMateScore(bestScore) && bestScore > 0) {
+                    int mi = mateMovesFromScore(bestScore);
+                    String side = root.whiteToMove() ? "White" : "Black";
+                    ChessBoardPanel.console.logInfo("Forced mate in " + mi + " (" + side + ")");
+                    break;
+                }
+
+                logIter(depth, bestScore, metrics.nodes - ns, (System.nanoTime() - ds) / 1_000_000, bestMove);
+            }
+        } catch (TimeUp ignore) {
+        }
+
+        long totalMs = (System.nanoTime() - t0) / 1_000_000;
 
         if (Util.isMateScore(bestScore)) {
             int mi = mateMovesFromScore(bestScore);
@@ -159,7 +217,7 @@ public final class NegamaxAB implements SearchAlgorithm {
             ChessBoardPanel.console.logInfo("Mate in " + mi + " (" + side + "), Best=" + Util.uci(bestMove));
         } else {
             ChessBoardPanel.console.logInfo("Best=" + Util.uci(bestMove) + ", Score=" + Util.scoreStr(bestScore)
-                    + ", Time(Sec)=" + (double) totalMs/1000L);
+                    + ", Time(Sec)=" + (double) totalMs / 1000L);
         }
 
         if (progress != null) progress.accept(100);
@@ -173,33 +231,65 @@ public final class NegamaxAB implements SearchAlgorithm {
                                       int betaInit,
                                       int maxDepth,
                                       IntConsumer progress) {
-        int alpha = alphaInit, beta = betaInit;
-        int iterBestMove = moves.get(0);
+        final int ROOT_AVOID_REP_MARGIN = 80;
+        int alpha = alphaInit;
+        int iterBestMove = moves.getFirst();
         int iterBestScore = -SearchConstants.INF;
 
         int done = 0, total = Math.max(1, moves.size());
+        final int rootPly = 0;
+        final long rootKey = pathKeys[0];
+        boolean iterBestIsRep = false;
 
-        final int rootPly = currentRootPly();
         for (int m : moves) {
+            checkTime();
+
             GameState.Undo u = undo[rootPly];
-            boolean irreversible =
-                    GameState.isCapture(m) || GameState.moverKind(m) == 0;
+            boolean isCapture = GameState.isCapture(m);
+            boolean isPawnMv  = GameState.moverKind(m) == 0;
+            boolean irreversible = isCapture || isPawnMv;
 
             root.makeInPlace(m, u);
             int childPly = rootPly + 1;
-            rep.set(childPly, Zobrist.compute(root));
+            pathKeys[childPly] = Zobrist.compute(root);
 
-            int savedFloor = rep.floor();
-            if (irreversible) rep.setFloor(childPly);
+            int savedFloor = floorPly;
+            if (irreversible) floorPly = childPly;
 
-            int sc = -negamax(root, depth - 1, -beta, -alpha, childPly);
+            boolean childIsRep3 = isThreefold(childPly);
+            boolean childIsImmediateBack = false;
+            if (!irreversible && depth <= 2) {
+                var replies = MoveGen.generateAllLegal(root);
+                GameState.Undo u2 = undo[childPly];
+                for (int r : replies) {
+                    root.makeInPlace(r, u2);
+                    long k = Zobrist.compute(root);
+                    root.unmake(u2);
+                    if (k == rootKey) { childIsImmediateBack = true; break; }
+                }
+            }
 
-            if (irreversible) rep.setFloor(savedFloor);
+            boolean childIsRepSoft = childIsRep3 || childIsImmediateBack;
+
+            int sc;
+            if (childIsRep3) {
+                int standOpp   = eval.evalSTM(root);
+                int standForUs = -standOpp;
+                sc = repetitionScoreForUs(standForUs);
+            } else {
+                sc = -negamax(root, depth - 1, -betaInit, -alpha, childPly);
+                if (childIsImmediateBack && !irreversible) sc -= TWOFOLD_PENALTY;
+            }
+
+            if (irreversible) floorPly = savedFloor;
             root.unmake(u);
 
-            if (sc > iterBestScore) {
+            if (sc > iterBestScore ||
+                    (sc == iterBestScore && (iterBestIsRep && !childIsRepSoft)) ||
+                    (!childIsRepSoft && iterBestIsRep && sc + ROOT_AVOID_REP_MARGIN > iterBestScore)) {
                 iterBestScore = sc;
                 iterBestMove  = m;
+                iterBestIsRep = childIsRepSoft;
             }
             if (iterBestScore > alpha) alpha = iterBestScore;
 
@@ -217,15 +307,11 @@ public final class NegamaxAB implements SearchAlgorithm {
                 iterBestMove  = m;
                 break;
             }
-
-            if (alpha >= beta) {
-                break;
-            }
+            if (alpha >= betaInit) break;
         }
 
         boolean failedLow  = (iterBestScore <= alphaInit && alphaInit > -SearchConstants.INF);
         boolean failedHigh = (iterBestScore >= betaInit  && betaInit  <  SearchConstants.INF);
-
         return new RootResult(iterBestMove, iterBestScore, failedLow, failedHigh);
     }
 
@@ -233,8 +319,12 @@ public final class NegamaxAB implements SearchAlgorithm {
         final int bestMove;
         final int bestScore;
         final boolean failedLow, failedHigh;
+
         RootResult(int bm, int bs, boolean fl, boolean fh) {
-            this.bestMove = bm; this.bestScore = bs; this.failedLow = fl; this.failedHigh = fh;
+            this.bestMove = bm;
+            this.bestScore = bs;
+            this.failedLow = fl;
+            this.failedHigh = fh;
         }
     }
 
@@ -251,26 +341,36 @@ public final class NegamaxAB implements SearchAlgorithm {
         return -1;
     }
 
-    private int negamax(GameState s, int depth, int alpha, int beta, int ply){
+    private int negamax(GameState s, int depth, int alpha, int beta, int ply) {
         metrics.nodes++;
+        if ((metrics.nodes & 0x3FF) == 0) checkTime();
 
-        if (alpha < -SearchConstants.MATE + SearchConstants.MAX_PLY) alpha = -SearchConstants.MATE + SearchConstants.MAX_PLY;
-        if (beta  >  SearchConstants.MATE - SearchConstants.MAX_PLY) beta  =  SearchConstants.MATE - SearchConstants.MAX_PLY;
+        if (alpha < -SearchConstants.MATE + SearchConstants.MAX_PLY)
+            alpha = -SearchConstants.MATE + SearchConstants.MAX_PLY;
+        if (beta > SearchConstants.MATE - SearchConstants.MAX_PLY)
+            beta = SearchConstants.MATE - SearchConstants.MAX_PLY;
         if (alpha >= beta) return alpha;
 
-        long key = rep.get(ply);
-        if (key == 0L) { key = Zobrist.compute(s); rep.set(ply, key); }
+        long key = Zobrist.compute(s);
+        pathKeys[ply] = key;
 
-        if (rep.isThreefold(ply)) {
-            int standPat = eval.evalSTM(s);
-            if (standPat > 0) return +SearchConstants.CONTEMPT;
-            if (standPat < 0) return 0;
-            return 0;
+        if (isThreefold(ply)) {
+            int stand = eval.evalSTM(s);
+            int rep   = repetitionScoreForUs(stand);
+            tt.store(key, depth, TranspositionTable.EXACT, Util.toTTScore(rep, ply), 0, tt.age());
+            return rep;
         }
 
         final TranspositionTable.ProbeOut out = probeOutByPly[ply];
         if (tt.probe(key, depth, alpha, beta, out)) {
             return Util.fromTTScore(out.score, ply);
+        }
+        boolean inCheck = Attacks.isInCheck(s, s.whiteToMove());
+        if (!inCheck && depth == 1) {
+            int stand = eval.evalSTM(s);
+            if (stand + FUT_MARGIN <= alpha) {
+                return stand;
+            }
         }
 
         if (depth == 0 || ply >= SearchConstants.MAX_PLY) {
@@ -278,7 +378,7 @@ public final class NegamaxAB implements SearchAlgorithm {
         }
 
         List<Integer> moves = MoveGen.generateAllLegal(s);
-        if (moves.isEmpty()){
+        if (moves.isEmpty()) {
             int score = Attacks.isInCheck(s, s.whiteToMove())
                     ? (-SearchConstants.MATE + ply)
                     : 0;
@@ -288,58 +388,84 @@ public final class NegamaxAB implements SearchAlgorithm {
 
         int a0 = alpha, best = -SearchConstants.INF, bestMove = 0;
         int hashMove = out.move;
-        boolean inCheck = Attacks.isInCheck(s, s.whiteToMove());
 
         orderer.order(s, ply, hashMove, inCheck, moves, depth);
 
         int moveNum = 0;
-        for (int m : moves){
+        int standOnce = Integer.MIN_VALUE;
+        for (int m : moves) {
             moveNum++;
-            var u = undo[ply];
 
             boolean isCapture = GameState.isCapture(m);
             boolean isPromo   = GameState.promoKind(m) >= 0;
             boolean isPawnMv  = GameState.moverKind(m) == 0;
             boolean irreversible = isCapture || isPawnMv;
-
-            s.makeInPlace(m, u);
-            int nextPly = ply + 1;
-            rep.set(nextPly, Zobrist.compute(s));
-
-            int savedFloor = rep.floor();
-            if (irreversible) rep.setFloor(nextPly);
-
-            int sc;
             boolean isTactical = isCapture || isPromo;
-
-            if (moveNum == 1){
-                sc = -negamax(s, depth-1, -beta, -alpha, nextPly);
-            } else {
-                int d = depth - 1;
-                if (!inCheck && !isTactical && d >= 3 && moveNum > 3){
-                    int r = 1 + (moveNum > 10 ? 1 : 0);
-                    sc = -negamax(s, d - r, -alpha - 1, -alpha, nextPly);
-                    if (sc > alpha){
-                        sc = -negamax(s, d, -alpha - 1, -alpha, nextPly);
-                        if (sc > alpha && sc < beta){
-                            sc = -negamax(s, d, -beta, -alpha, nextPly);
-                        }
-                    }
-                } else {
-                    sc = -negamax(s, depth-1, -alpha - 1, -alpha, nextPly);
-                    if (sc > alpha && sc < beta){
-                        sc = -negamax(s, depth-1, -beta, -alpha, nextPly);
+            if (!inCheck && !isTactical) {
+                if ((depth == 1 && moveNum > LMP_D1_LIMIT) || (depth == 2 && moveNum > LMP_D2_LIMIT)) {
+                    continue;
+                }
+                if (depth <= 2) {
+                    if (standOnce == Integer.MIN_VALUE) standOnce = eval.evalSTM(s);
+                    if (standOnce + FUT_CHILD_MARGIN <= alpha) {
+                        continue;
                     }
                 }
             }
 
-            if (irreversible) rep.setFloor(savedFloor);
+            var u = undo[ply];
+            s.makeInPlace(m, u);
+            int nextPly = ply + 1;
+            pathKeys[nextPly] = Zobrist.compute(s);
+
+            int savedFloor = floorPly;
+            if (irreversible) floorPly = nextPly;
+
+            int sc;
+            boolean childIsRep = false;
+
+            if (isThreefold(nextPly)) {
+                int standOpp   = eval.evalSTM(s);
+                int standForUs = -standOpp;
+                int rep        = repetitionScoreForUs(standForUs);
+                tt.store(pathKeys[nextPly], depth - 1, TranspositionTable.EXACT, Util.toTTScore(rep, nextPly), 0, tt.age());
+                sc = rep;
+                childIsRep = true;
+            } else if (moveNum == 1) {
+                sc = -negamax(s, depth - 1, -beta, -alpha, nextPly);
+            } else {
+                int d = depth - 1;
+                if (!inCheck && !isTactical && d >= 3 && moveNum > 3) {
+                    int r = 1 + (moveNum > 10 ? 1 : 0);
+                    sc = -negamax(s, d - r, -alpha - 1, -alpha, nextPly);
+                    if (sc > alpha) {
+                        sc = -negamax(s, d, -alpha - 1, -alpha, nextPly);
+                        if (sc > alpha && sc < beta) {
+                            sc = -negamax(s, d, -beta, -alpha, nextPly);
+                        }
+                    }
+                } else {
+                    sc = -negamax(s, depth - 1, -alpha - 1, -alpha, nextPly);
+                    if (sc > alpha && sc < beta) {
+                        sc = -negamax(s, depth - 1, -beta, -alpha, nextPly);
+                    }
+                }
+            }
+
+            if (!childIsRep && repeatsOnPathAny(nextPly) && !irreversible) {
+                sc -= TWOFOLD_PENALTY;
+            }
+
+            if (irreversible) floorPly = savedFloor;
             s.unmake(u);
 
-            if (sc > best){ best = sc; bestMove = m; }
-            if (best > alpha){
+            if (sc > best) {
+                best = sc;
+                bestMove = m;
+            }
+            if (best > alpha) {
                 alpha = best;
-                if (alpha >= beta){
+                if (alpha >= beta) {
                     orderer.onCutoff(s, ply, m, depth);
                     break;
                 }
@@ -351,38 +477,25 @@ public final class NegamaxAB implements SearchAlgorithm {
         return best;
     }
 
+    private boolean repeatsOnPathAny(int ply) {
+        long key = pathKeys[ply];
+        int start = Math.max(floorPly, 1);
+        for (int i = start; i < ply; i++) {
+            if (pathKeys[i] == key) return true;
+        }
+        return false;
+    }
+
+    private boolean isThreefold(int ply) {
+        long key = pathKeys[ply];
+        int start = Math.max(floorPly, 1);
+        int occInPath = 0;
+        for (int i = start; i < ply; i++) if (pathKeys[i] == key) occInPath++;
+        return repBase.applyAsInt(key) + occInPath + 1 >= 3;
+    }
+
     private void logIter(int depth, int score, long nodes, long ms, int best) {
         System.out.printf("Depth %2d: score=%s  nodes=%,d  time=%d ms  nps=%,d  best=%s%n",
                 depth, Util.scoreStr(score), nodes, ms, Util.rate(nodes, ms), Util.uci(best));
-    }
-
-
-
-    private int seededRootPlies = 0;
-
-    private int currentRootPly() {
-        return Math.max(0, seededRootPlies - 1);
-    }
-
-
-    private void seedRepetition(GameState root, List<Integer> history) {
-        rep.clearFrom(0);
-        GameState cur = root.clone();
-
-        int ply = 0;
-        rep.set(ply, Zobrist.compute(cur));
-
-        int lastIrrevPly = 0;
-        if (history != null) {
-            for (int mv : history) {
-                boolean irreversible =
-                        GameState.isCapture(mv) || GameState.moverKind(mv) == 0;
-
-                cur.makeInPlace(mv,null);
-                rep.set(++ply, Zobrist.compute(cur));
-                if (irreversible) lastIrrevPly = ply;
-            }
-        }
-        rep.setFloor(lastIrrevPly);
     }
 }
